k8s/currencyservice-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  template:
    spec:
      containers:
      - name: server
        resources:
          limits:
            cpu: 300m
            memory: 256Mi 
          requests:
            cpu: 100m
            memory: 128Mi
